...
    </plurals>
    <plurals name="tier_lists_rankings_count">
        <item quantity="one">%d ranking</item>
        <item quantity="other">%d rankings</item>
    </plurals>
    <string name="snack_action_failed">Change not saved</string>
    <string name="tier_detail_content_description_back">Navigate back</string>
    <string name="tier_detail_content_description_more">More options</string>
    <plurals name="tier_lists_count">
        <item quantity="one">%d list</item>
        <item quantity="other">%d lists</item>
    </plurals>
    <plurals name="tier_lists_ranked_count">
...
